# ChangeLog for net-ftp/tftp-hpa
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/ChangeLog,v 1.35 2008/11/01 06:58:21 robbat2 Exp $

*tftp-hpa-0.49 (01 Nov 2008)

  01 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> +tftp-hpa-0.49.ebuild:
  Version bump.

  09 May 2008; Jeroen Roovers <jer@gentoo.org> tftp-hpa-0.48.ebuild:
  Stable for HPPA too.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  tftp-hpa-0.48.ebuild:
  ppc. stable

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> tftp-hpa-0.48.ebuild:
  alpha stable

  13 May 2007; Steve Dibb <beandog@gentoo.org> tftp-hpa-0.48.ebuild:
  amd64 stable

  10 May 2007; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  Fix metadata

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> tftp-hpa-0.48.ebuild:
  ia64 stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> tftp-hpa-0.48.ebuild:
  Stable on sparc

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> tftp-hpa-0.48.ebuild:
  Stable on ppc64

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> tftp-hpa-0.48.ebuild:
  x86 stable

*tftp-hpa-0.48 (01 Feb 2007)

  01 Feb 2007; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  +tftp-hpa-0.48.ebuild:
  Version bump.

*tftp-hpa-0.45-r1 (18 Jan 2007)

  18 Jan 2007; Robin H. Johnson <robbat2@gentoo.org>
  +tftp-hpa-0.45-r1.ebuild:
  0.45 broke the conf.d file, need a new revision for this.

  08 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -tftp-hpa-0.44.ebuild:
  QA: Removed unused versions.

*tftp-hpa-0.45 (25 Dec 2006)

  25 Dec 2006; Mike Frysinger <vapier@gentoo.org>
  +files/tftp-hpa-0.45-parallel.patch, +tftp-hpa-0.45.ebuild:
  Version bump and fix building in parallel.

*tftp-hpa-0.44 (13 Dec 2006)

  13 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  -files/in.tftpd.confd-0.42, +files/in.tftpd.confd-0.44,
  -tftp-hpa-0.42.ebuild, -tftp-hpa-0.42-r1.ebuild, +tftp-hpa-0.44.ebuild: