@@ -12,6 +12,6 @@ EBUILD tftp-hpa-0.40.1.ebuild 1022 RMD160 b4818a6693fcc92ecb3f2b5d1368e69510a590
 EBUILD tftp-hpa-0.45-r1.ebuild 1327 RMD160 b963dafa9caabff4cd5175f9dcfbe0bab59bd94e SHA1 54aa9196e8e58ecbfc73b7d77b3ca69261f69b4c SHA256 2b12470c63fc0172ea84187137173d9fca05c212004aa918b25475dac7f30064
 EBUILD tftp-hpa-0.45.ebuild 1324 RMD160 f4390cb45311df61e1f75fdab61cafd6e7c8781c SHA1 bb23cf1a0fa289e9378364c37699b04e84e69d8b SHA256 2457c751f03dcd2311fb188f8759ad16b1ae8a5857673b934755a74d2613ec56
 EBUILD tftp-hpa-0.48.ebuild 1210 RMD160 f57d4ee7979740dcb8681d75b7580781bc70d772 SHA1 5cddf0cefadd724ef89e70c13bdf606d2899fe6f SHA256 184f7a0e89df36197be3f92df099f74a6b7028a5d10647415f1bfc5574ed13d8
-EBUILD tftp-hpa-0.49.ebuild 1224 RMD160 f2b751db6ca388a8e1fc6d73aa940df3a1829a52 SHA1 3d0aef8376d67d6350de2a0c0307f17a8e96a78d SHA256 affc5b78095d1818125ccfdc41b53a9fc8e5cf0976003ad8db0f0932803fde21
-MISC ChangeLog 7166 RMD160 23c31a462f155266bcb2112229e35aaefe38bea8 SHA1 a682e5e83c509119c5984c7931f8a868bca1192c SHA256 3987267b20e7ed542c1979e7b8d88c50061720af8b7153baa1f40e6c9e6b6ac2
+EBUILD tftp-hpa-0.49-r1.ebuild 1253 RMD160 ab41716ad623160cb4d58c3a9a69648aa0960855 SHA1 0506a2eb705edcdf78a520998c1cd8542d567935 SHA256 469fa1475862234ce8e2364ca897dae37383e4d90ce97f5281ed753a62738dc7
+MISC ChangeLog 7344 RMD160 c2019576a3772f86eec321e207849278faf0ea06 SHA1 b6fff94f7087c769b8f9f2ba43c3e6fa9a5ed5d5 SHA256 15a0529072ee54d96c450ab87efaa0d9a494c6875f6a298d7259caa205b61182
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
