@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/tftp-hpa-0.49.ebuild,v 1.1 2008/11/01 06:58:21 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/tftp-hpa-0.49-r1.ebuild,v 1.1 2009/02/27 14:21:02 armin76 Exp $
 
 DESCRIPTION="port of the OpenBSD TFTP server"
 HOMEPAGE="http://www.kernel.org/pub/software/network/tftp/"
@@ -9,7 +9,7 @@ SRC_URI="mirror://kernel/software/network/tftp/${P}.tar.bz2"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE="readline selinux tcpd"
+IUSE="ipv6 readline selinux tcpd"
 
 DEPEND="readline? ( sys-libs/readline )
 	tcpd? ( sys-apps/tcp-wrappers )
@@ -19,6 +19,7 @@ PROVIDE="virtual/tftp"
 
 src_compile() {
 	econf \
+		$(use_with ipv6) \
 		$(use_with tcpd tcpwrappers) \
 		$(use_with readline) \
 		|| die
